--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "intersperse",
+  "name": "@yayoc/intersperse",
   "version": "0.0.1",
-  "description": "",
+  "description": "intersperse in JavaScript",
   "main": "index.js",
   "scripts": {
     "test": "jest",
