--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "jest": "^21.2.1",
     "lint-staged": "^4.3.0",
     "prettier": "1.7.4"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
